opa-local-minikube/resources/test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress-allowlist: "*.test.acmecorp.com"
  name: lbg-bcb-project-test
